name:                Repl
version:             0.1.0.0
synopsis:            Simple
description:         Please see README.md
homepage:            https://github.com/vojkog/haskell_tutorial_cookbook_examples
license:             Apache-2.0
license-file:        ../APACHE_LICENSE-2.0.txt
author:              Vojimir Golem
maintainer:          TODO email
copyright:           Copyright 2021 Vojimir Golem. All rights reserved
category:            dev
build-type:          Simple
cabal-version:       >=1.22.4.0

executable Simple
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, containers

